# qt-fork

./: CMakeLists.txt  SettingsLoader.cpp  SettingsLoader.h  main.cpp  main.cpp.HpyJBT  settings.ini
class_first/: ClassFirst.cpp  ClassFirst.h
class_second/: ClassSecond.cpp  ClassSecond.h
class_third/: ClassThird.cpp  ClassThird.h
